Some spacing fixes

--- a/styles/common.less
+++ b/styles/common.less
@@ -25,5 +25,6 @@ body {
         line-height: 1.2em;
         padding: 2px;
         margin-bottom: 4px;
+        margin-right: 4px;
     }
 }
